# Togarepi_Thesis_Final_Downward

driver/: arguments.py  main.py  run_components.py
src/: CMakeLists.txt
src/search/: abstract_task.h  task_proxy.h
src/search/pdbs/: canonical_pdbs_heuristic.cc  pattern_database_factory.cc  pdb_heuristic.cc  utils.cc  utils.h
src/search/tasks/: root_task.cc
